--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,8 @@
     transform: rotate(360deg);
   }
 }
+body {
+  background-image: url("/src/images/globe.jpg");
+  background-color: #cccccc;
+  
+ }
