--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,5 @@
 }
 body {
   background-image: url("/src/images/globe.jpg");
-  background-color: #cccccc;
-  
+  background-size: 1600px 800px;
  }
