--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,10 @@ body {
   background-image: url("/src/images/globe.jpg");
   background-size: 1600px 800px;
  }
+
+ h1 {
+  text-align: center;
+  font-style: oblique;
+  color: white;
+  
+ }
