--- a/src/App.css
+++ b/src/App.css
@@ -48,3 +48,33 @@ body {
   font-style: oblique;
   text-align: center;
  }
+
+ form {
+  text-align: center;
+ }
+label{  
+    color: #ffffff;  
+    font-size: 17px;  
+}  
+#Uname{  
+    width: 300px;  
+    height: 30px;  
+    border: none;  
+    border-radius: 3px;  
+    padding-left: 8px;  
+}  
+#Pass{  
+    width: 300px;  
+    height: 30px;  
+    border: none;  
+    border-radius: 3px;  
+    padding-left: 8px;  
+      
+}  
+#log{  
+    width: 100px;  
+    height: 30px;  
+    border: none;    
+    padding-left: 0px;  
+    color: rgb(0, 0, 0);
+}
