--- a/src/App.css
+++ b/src/App.css
@@ -74,7 +74,22 @@ label{
     border: none;  
     border-radius: 3px;  
     padding-left: 8px;  
+  
 }  
+#fname{
+  width: 300px;  
+    height: 30px;  
+    border: none;  
+    border-radius: 3px;  
+    padding-left: 8px
+}
+#lname{
+  width: 300px;  
+  height: 30px;  
+  border: none;  
+  border-radius: 3px;  
+  padding-left: 8px
+}
 #Pass{  
     width: 300px;  
     height: 30px;  
@@ -89,4 +104,11 @@ label{
     border: none;    
     padding-left: 0px;  
     color: rgb(0, 0, 0);
+}
+#luo{
+  width: 100px;  
+  height: 30px;  
+  border: none;    
+  padding-left: 0px;  
+  color: rgb(0, 0, 0);
 }
