--- a/src/App.css
+++ b/src/App.css
@@ -48,10 +48,13 @@ body {
  }
 
  .Etusivu{
-  text-align: center;
+  text-align:center;
+  margin-top: 10%;
   font-style: oblique;
   color: rgb(255, 255, 255);
   border-style: groove;
+  padding-top: 2%;
+  padding-bottom: 2%;
  }
 
  h1{
