--- a/src/App.css
+++ b/src/App.css
@@ -49,13 +49,15 @@ body {
 
  .Etusivu{
   text-align:center;
-  margin-top: 20%;
-  margin-bottom: 20%;
-  font-style: oblique;
+  margin-top: 10%;
+  margin-bottom: 60%;
+  font-style: italic;
+  font-family: Arial, Helvetica, sans-serif;
   color: rgb(255, 255, 255);
   border-style: groove;
   padding-top: 2%;
-  padding-bottom: 2%;
+  margin-right: 5%;
+  margin-left: 5%;
  }
 
  h1{
@@ -81,14 +83,14 @@ label{
   
 }  
 #fname{
-  width: 300px;  
+  width: 189px;  
     height: 30px;  
     border: none;  
     border-radius: 3px;  
     padding-left: 8px
 }
 #lname{
-  width: 300px;  
+  width: 189px;  
   height: 30px;  
   border: none;  
   border-radius: 3px;  
